# eleva_core

./: MANIFEST.in  README.md  modules.txt  pyproject.toml  setup.py
api/: conversion.py  lead.py
doctype/cliente_contato/: cliente_contato.json  cliente_contato.py
doctype/cliente_eleva/: cliente_eleva.json  cliente_eleva.py
doctype/cliente_endereco/: cliente_endereco.json
doctype/lead_contact_method/: lead_contact_method.py
doctype/lead_eleva/: lead_eleva.py
eleva_core/: hooks.py  install.py  modules.txt
eleva_core/api/: cliente.py  conversion.py  lead.py
eleva_core/config/: desktop.py
eleva_core/doctype/cliente_subcadastro/: cliente_subcadastro.json  cliente_subcadastro.py
eleva_core/doctype/lead_contact_method/: lead_contact_method.json
eleva_core/eleva_core/doctype/cliente_contato/: cliente_contato.json
eleva_core/eleva_core/doctype/cliente_eleva/: cliente_eleva.json
eleva_core/eleva_core/doctype/cliente_endereco/: cliente_endereco.json  cliente_endereco.py
eleva_core/eleva_core/doctype/cliente_subcadastro/: cliente_subcadastro.json
eleva_core/eleva_core/doctype/lead_contact_method/: lead_contact_method.json
eleva_core/eleva_core/doctype/lead_eleva/: lead_eleva.json
