[project]
name = "eleva_core"
authors = [
    { name = "Eduardo Vessio / OpenAI", email = "eduardovessio@hotmail.com" }
]
description = "Modulo 1 - Cadastros e Controles da Eleva em Frappe"
requires-python = ">=3.11"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
